--- a/game.service
+++ b/game.service
@@ -3,7 +3,7 @@ Description=Game init via docker
 After=default.target
 
 [Service]
-ExecStart=docker-compose --project-directory /home/admin/game/ up
+ExecStart=docker compose --project-directory /home/admin/game/ up
 Type=exec
 Restart=on-failure
 
